apps/base/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: pgadmin
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.pgadmin"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
